styles/main.css
/* Globals */

body {
  --bg-color: #4ABDAC;
  --bg-color-dark: #0E9683;
  --bg-color-very-dark: #005E51;
  --bg-color-transparent: radial-gradient(rgba(74,189,172,1),rgba(74,189,172,0.8));
  --bg-color-dark-to-very-dark: radial-gradient(var(--bg-color-dark),var(--bg-color-very-dark));
  --bg-orange-transparent: linear-gradient(rgba(255,239,208,0.3), rgba(255,214,131,0.4));
  --emphasis-color: #FC4A1A;
  --link-color: #FFD683;
  --rounded: 0.2em;
  --text-color: #DFDCE3;
  --transition-time: 0.5s;
  --visited-color: #FFEFD0;
  background: var(--bg-color-transparent), url('../images/lucas-on-trike.jpg');
  background-attachment: fixed;
  background-position: 0 0;
  background-size: cover;
  color: var(--text-color);
  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
  overflow-x: hidden;
  min-height: 100vh;
}

@media only screen and (min-width: 640px) {
  body {
    background-position: 0 -100px;
  }
}

a {
  color: var(--link-color);
}

a:visited {
  color: var(--visited-color);
}

h1, h2, h3, h4, h5, h6 {
  font-family: 'Roboto', Arial, Helvetica, sans-serif;
}

figure {
  margin: 0;
}

h1 {
  font-size: 2em;
  font-weight: 900;
  margin: 0;
  padding: 0.5em 0.1em;
}

h2 {
  font-size: 1.25em;
  font-weight: 700;
}

.heading__emphasis {
  background: var(--emphasis-color);
  color: var(--text-color);
  margin: 0.5em auto;
}

/* Header & Nav */
/* Default -- for index.html on mobile */
.nav {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 0;
  position: absolute;
  top: 10em;
  width: 100%;
}

.nav--list {
  list-style: none;
  margin: 0 auto;
  padding: 0;
}

.nav--list--item {
  text-align: center;
}

.nav--button {
  background: linear-gradient(var(--visited-color), var(--link-color));
  border: 0;
  border-radius: var(--rounded);
  font-size: 1.25em;
  font-weight: 700;
  line-height: 2em;
  margin: 0.5em auto;
  padding: 0.5em 2em;
}

.nav--button--home {
  width: 163px;
}

.nav--list--item:hover .nav--button {
  background: linear-gradient(var(--visited-color), #DBAE53);
  box-shadow: 0 0 1.5em var(--text-color);
  color: black;
  cursor: pointer;
}

.nav--outside-links {
  font-size: 0.75em;
  line-height: 2em;
  margin: auto;
  margin-top: 1em;
  text-align: right;
  width: 163px;
}

/* Header & Nav in index on desktop */

@media only screen and (min-width: 640px) {
  .nav--list--item {
    display: inline-block;
    margin: 0 1em;
    padding-right: 1.5em;
  }

  .nav--list--image {
    box-sizing: border-box;
    border-radius: var(--rounded);
    cursor: pointer;
    height: 163px;
    width: 163px;
  }

  .nav--list--image__about {
    background: url('../images/lucas-in-park-thumbnail.jpg') 0 0/cover;
  }

  .nav--list--item:hover .nav--list--image__about {
    box-shadow: 0 0 1.5em var(--text-color);
  }

  .nav--list--image__projects {
    background: url('../images/code-image.jpg') 0 0/cover;
  }

  .nav--list--item:hover .nav--list--image__projects {
    box-shadow: 0 0 1.5em var(--text-color);
  }

  .nav--list--image__blog {
    background: url('../images/book-image.jpg') 0 0/cover;
  }

  .nav--list--item:hover .nav--list--image__blog {
    box-shadow: 0 0 1.5em var(--text-color);
  }

  .nav--outside-links {
    margin-top: 3em;
    width: 585px;
  }
}

/* Header & Nav on sub-pages (mobile) */

.nav__header {
  background: var(--bg-orange-transparent);
  flex-direction: row;
  position: relative;
  top: 0;
}

.nav--toggle {
  display: inline-block;
  font-size: 2em;
  font-weight: 700;
  transform: rotate(90deg);
  transition: var(--transition-time);
  -moz-transition: var(--transition-time);
  -ms-transition: var(--transition-time);
  -o-transition: var(--transition-time);
  -webkit-transition: var(--transition-time);
}

.nav--toggle:hover {
  cursor: pointer;
}

.nav--toggle__expand {
  transform: rotate(-90deg);
  transition: var(--transition-time);
  -moz-transition: var(--transition-time);
  -ms-transition: var(--transition-time);
  -o-transition: var(--transition-time);
  -webkit-transition: var(--transition-time);
}

.nav--list__collapse {
  list-style: none;
  margin: 0;
  height: 2.75em;
  overflow-y: hidden;
  padding: 0 1em;
  transition: var(--transition-time);
  -moz-transition: var(--transition-time);
  -ms-transition: var(--transition-time);
  -o-transition: var(--transition-time);
  -webkit-transition: var(--transition-time);
}

.nav--list__expand {
  height: 13em;
  transition: var(--transition-time);
  -moz-transition: var(--transition-time);
  -ms-transition: var(--transition-time);
  -o-transition: var(--transition-time);
  -webkit-transition: var(--transition-time);
}

.nav--list__collapse .nav--list--item {
  text-align: left;
}

.nav--list__collapse .nav--button {
  background: none;
  text-align: left;
  margin: 0;
  padding: 0;
  width: fit-content;
}

.nav--list__collapse .nav--list--item:hover .nav--button {
  background: none;
  box-shadow: none;
  color: black;
  text-shadow: 0 0 1em white;
}

.nav--outside-links__header {
  font-size: 0.75em;
  line-height: 1.5em;
  padding: 0.25em;
  position: absolute;
  right: 0;
  top: 0;
}

/* Header & Nav on sub-pages (desktop) */

@media only screen and (min-width: 640px) {
  /* No changes needed here! Made adjustments in main.js */
}

/* Main (for simple pages on mobile) */

.main {
  background: linear-gradient(rgba(14,150,131,0.5),rgba(14,150,131,0.5));
  margin: auto;
  padding: 1em;
}

.main__centered {
  text-align: center;
}

.main--article {
  line-height: 1.5em;
}

.article--figure {
  box-sizing: border-box;
  margin: 1em auto;
  padding: 0 5%;
  width: 90%;
  max-width: 326px;
}

.article--figure__wide {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  width: 100%;
}

.figure--image {
  border-radius: var(--rounded);
  display: block;
  margin: auto;
  width: 90%;
}

.figure--image__wide {
  border-radius: var(--rounded);
  display: block;
  margin: auto;
  width: 100%;
}

.figure--caption {
  display: block;
  font-size: 0.75em;
  font-style: italic;
  line-height: 1.5em;
  margin: auto;
  width: 90%;
}

.figure--caption__wide {
  display: block;
  font-size: 0.75em;
  font-style: italic;
  line-height: 1.5em;
  margin: auto;
  text-align: center;
  width: 100%;
}

/* Main (for simple pages on desktop) */

@media only screen and (min-width: 640px) {
  .main {
    border-radius: var(--rounded);
    margin-top: 2em;
    max-width: 640px;
    text-align: justify;
  }

  .main--article p {
    margin-bottom: 2em;
  }

  .article--figure__right {
    float: right;
    margin: 0 0 1em 1em;
    padding: 0;
    width: 40%;
  }

}

